--- a/slides/defs.tex
+++ b/slides/defs.tex
@@ -1,19 +1,18 @@
-\sectionoutlineon  % comment out to hide outline before each section
-\footlineon  % comment out to hide footline
-% \frametitleleft  % comment out to center frame title
-% \onelinebib  % uncomment to put bibliography entries in one line
-
-\usepackage{tikz}
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{mathtools}
 
 % commands
 \newcommand{\ones}{{\bf 1{}}}  % vector with all components one
 \newcommand{\reals}{{\bf R{}}}  % real numbers
+\newcommand{\nats}{{\bf N{}}}  % natural numbers
+\newcommand{\rats}{{\bf Q{}}}  % rational numbers
 \newcommand{\ints}{{\bf Z{}}}  % integers
 \newcommand{\symms}{{\bf S{}}}  % symmetric matrices
-\newcommand{\prob}{\mathop{\bf prob{}}}  % probability
+\newcommand{\prob}{\mathop{\bf prob}}  % probability
 \newcommand{\expect}{\mathop{\bf E{}}}  % expectation
 \newcommand{\var}{\mathop{\bf var}}  % variance
+\newcommand{\quart}{\mathop{\bf quartile}}  % quartile
 \newcommand{\card}{\mathop{\bf card}}  % cardinality
 \renewcommand{\dim}{\mathop{\bf dim}}  % dimension
 \newcommand{\dom}{\mathop{\bf dom}}  % domain
@@ -28,14 +27,18 @@
 \newcommand{\conv}{\mathop{\bf conv}}  % convex hull
 \newcommand{\rg}{\mathop{\cal R{}}}  % range
 \newcommand{\nl}{\mathop{\cal N{}}}  % null space
-\newcommand{\itr}{\mathop{\bf int}}  % interior
+\newcommand{\intr}{\mathop{\bf int}}  % interior
 \newcommand{\ri}{\mathop{\bf relint}}  % relative interior
 \newcommand{\cl}{\mathop{\bf cl}}  % closure
 \newcommand{\bd}{\mathop{\bf bd}}  % boundary
 \newcommand{\epi}{\mathop{\bf epi}}  % epigraph
+\newcommand{\hypo}{\mathop{\bf hypo}}  % hypograph
 \newcommand{\norm}[1]{{\lVert #1 \rVert}}  % norm
 \newcommand{\lambdamax}{{\lambda_{\rm max}}}  % max eigenvalue
 \newcommand{\lambdamin}{{\lambda_{\rm min}}}  % min eigenvalue
+\newcommand{\sigmamax}{{\sigma_{\rm max}}}  % max singular value
+\newcommand{\sigmamin}{{\sigma_{\rm min}}}  % min singular value
+\newcommand{\cond}{\mathop{\bf cond}} % condition number
 \newcommand{\ball}{{\cal B{}}}  % ball
 
 \newcommand{\cf}{{\rmfamily\itshape cf.}}
@@ -43,3 +46,9 @@
 \newcommand{\ie}{{\rmfamily\itshape i.e.}}
 \newcommand{\etc}{{\rmfamily\itshape etc.}}
 \newcommand{\etal}{{\rmfamily\itshape et al.}}
+
+\usepackage{lipsum}
+
+% hyperlink
+\usepackage{url}
+\usepackage[hidelinks]{hyperref}
