--- a/article/zharticle.sty
+++ b/article/zharticle.sty
@@ -16,11 +16,7 @@
 
 % section titles
 \usepackage{sectsty}
-\sectionfont{\sffamily\large}
-\subsectionfont{\sffamily\normalsize}
-\subsubsectionfont{\sffamily\normalsize}
-\paragraphfont{\sffamily\normalsize}
-\subparagraphfont{\sffamily\normalsize}
+\allsectionsfont{\sffamily}
 
 % bibliography
 \bibliographystyle{alpha}
