add presentation mode

--- a/article/article.tex
+++ b/article/article.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage{zharticle}
+% \usepackage[screen]{zharticle}  % presentation mode
 \input{defs.tex}
 
 \title{Title}
